# lancedb

./: Cargo.toml
.github/workflows/: android-build-v2.yml  android-original.yml  android.yml  debug-build.yml  debug-v2.yml  final-build.yml  fix-build.yml  manual-rust.yml  simple-build.yml
java/: pom.xml
nodejs/: Cargo.toml
python/python/lancedb/: permutation.py
python/python/tests/: test_permutation.py
rust/lancedb/src/: connection.rs
rust/lancedb/src/remote/: client.rs  db.rs  table.rs
rust/lancedb/src/table/: merge.rs
