[package]
name = "lancedb-nodejs"
edition.workspace = true
version = "0.28.0-beta.1"
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait.workspace = true
arrow-ipc.workspace = true
arrow-array.workspace = true
arrow-buffer = "57.2"
half.workspace = true
arrow-schema.workspace = true
env_logger.workspace = true
futures.workspace = true
lancedb = { path = "../rust/lancedb", default-features = false, features = [] }
napi = { version = "3.8.3", default-features = false, features = [
    "napi9",
    "async"
] }
napi-derive = "3.5.2"
log.workspace = true

# 暂时移除重型依赖以加速编译
# aws-lc-sys = "=0.38.0"
# aws-lc-rs = "=1.16.1"
# lzma-sys = { version = "0.1", features = ["static"] }

[build-dependencies]
napi-build = "2.3.1"

[features]
default = []
remote = []
